--- a/IoT.ipynb
+++ b/IoT.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -494,6 +494,7 @@
     "    targets, probs = get_next_probability(rnnlm, seed)\n",
     "    return targets, probs, seed\n",
     "\n",
+    "# some imports for interactive viz\n",
     "from ipywidgets import interact, ToggleButton"
    ]
   },
