--- a/IoT.ipynb
+++ b/IoT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -247,7 +247,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -341,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -567,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -578,7 +577,8 @@
     "from viz.client import register_data # function to compute per-charater scores and send them to the viz server\n",
     "\n",
     "# some random text by Shakespeare\n",
-    "text = \"\"\"We are accounted poor citizens, the patricians good.\n",
+    "text = \"\"\"\n",
+    "We are accounted poor citizens, the patricians good.\n",
     "What authority surfeits on would relieve us: if they\n",
     "would yield us but the superfluity, while it were\n",
     "wholesome, we might guess they relieved us humanely;\n",
@@ -592,29 +592,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# visualize assigned probability per character as per RNN\n",
+    "\n",
     "targets, scores = stepwise_scores(rnnlm, text, score_entropy=False)\n",
     "register_data(targets, scores)"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
+    "# visualize assigned probability per character as per Ngram LM\n",
+    "\n",
     "targets, scores = lm.stepwise_scores(text, score_entropy=True)\n",
     "register_data(targets, scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# visualize hidden activations from RNN\n",
+    "\n",
+    "from rnn_lm import get_activations\n",
+    "targets, output = get_activations(rnnlm, text)\n",
+    "register_data(targets, output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Interesting activation (non-exhaustive)\n",
+    "\n",
+    "# 137, 836, 102: word boundary\n",
+    "# 806: word & sent boundary\n",
+    "# 743: reset at the beginning\n",
+    "# 287: end of verse\n",
+    "# 196: verbs?\n",
+    "# 2, 22, 69: verse boundary\n",
+    "# 41: word & verse boundary\n",
+    "# 162: strange pattern"
    ]
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
